# voice_prompt

./: .clinerules  .coverage  .gitignore  PROJECT_SETUP.md  README.md  SPEC.md  TODO.md  config.yaml.example  create-shortcut.ps1  pyproject.toml  requirements.txt  voice-prompt-bg.sh  voice-prompt-silent.vbs  voice-prompt.bat  voice-prompt.ps1  voice-prompt.sh
.claude/: CLAUDE.md  README.md
.claude/commands/: build  spec  status  test
.claude/skills/: cross-platform-development.md  python-best-practices.md
scripts/: download-model.py  setup.ps1  setup.sh
tests/: test_config.py  test_hotkey.py  test_outputter.py  test_recorder.py  test_transcriber.py
voice_prompt/: __init__.py  __main__.py  config.py  hotkey.py  main.py  outputter.py  recorder.py  transcriber.py
